[package]
name = "m_calc"
version = "0.1.1"
authors = ["Sam <sam@teamzoon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = 'abort'

[dependencies]
rand = "0.8.3"
chrono = "0.4"
console = "0.14.0"
dialoguer = "0.7.1"
indicatif = "0.15.0"