[package]
name = "m_calc"
version = "0.3.2"
authors = ["Sam <sam@teamzoon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = 'abort'

[dependencies]
rand = "0.8.3"
chrono = "0.4.19"
console = "0.14.0"
dialoguer = "0.7.1"
indicatif = "0.15.0"
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"] }
prettytable-rs = "^0.8"